[gd_scene load_steps=11 format=3 uid="uid://c3gw4gtlp8qb0"]

[ext_resource type="Script" path="res://scripts/stomp_buttons.gd" id="1_2hwml"]
[ext_resource type="Texture2D" uid="uid://c87yg6tuuryqy" path="res://assets/button_stomp.png" id="2_7cgcv"]
[ext_resource type="Script" path="res://scenes/particles/color_buttons.gd" id="3_cg478"]
[ext_resource type="Texture2D" uid="uid://j6t0wh66mbf8" path="res://assets/center_button.png" id="4_t0l2d"]
[ext_resource type="PackedScene" uid="uid://bpqhs2ykmd0aq" path="res://green_stomp.tscn" id="5_csfd6"]
[ext_resource type="PackedScene" uid="uid://bbo5tln2q0wb" path="res://yellow_stomp.tscn" id="6_w44mf"]
[ext_resource type="PackedScene" uid="uid://carf73jefmpbu" path="res://red_stomp.tscn" id="7_5bp0y"]
[ext_resource type="PackedScene" uid="uid://ncn5tl5kes3g" path="res://blue_stomp.tscn" id="8_m7ju1"]
[ext_resource type="PackedScene" uid="uid://povabra474mo" path="res://white_stomp.tscn" id="9_a52wa"]
[ext_resource type="PackedScene" uid="uid://wnht6jlqxxxu" path="res://pause_menu.tscn" id="10_0i83q"]

[node name="stomp_buttons" type="Node2D"]
script = ExtResource("1_2hwml")

[node name="Button_Yellow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 0, 1)
texture_filter = 1
position = Vector2(480, 233)
rotation = -0.785397
texture = ExtResource("2_7cgcv")
script = ExtResource("3_cg478")

[node name="Button_Red" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
texture_filter = 1
position = Vector2(480, 233)
rotation = 0.785397
texture = ExtResource("2_7cgcv")
script = ExtResource("3_cg478")

[node name="Button_Green" type="Sprite2D" parent="."]
modulate = Color(0, 1, 0, 1)
texture_filter = 1
position = Vector2(480, 233)
rotation = 2.35619
texture = ExtResource("2_7cgcv")
script = ExtResource("3_cg478")

[node name="Button_Blue" type="Sprite2D" parent="."]
modulate = Color(0, 0, 1, 1)
texture_filter = 1
position = Vector2(480, 233)
rotation = 3.92699
texture = ExtResource("2_7cgcv")
script = ExtResource("3_cg478")

[node name="Button_center" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(480, 233)
texture = ExtResource("4_t0l2d")
script = ExtResource("3_cg478")

[node name="Green_stomp" parent="." instance=ExtResource("5_csfd6")]
modulate = Color(0, 1, 0, 1)
position = Vector2(481, 235)
scale = Vector2(2, 2)
lifetime = 0.5

[node name="Yellow_stomp" parent="." instance=ExtResource("6_w44mf")]
position = Vector2(481, 235)
scale = Vector2(2, 2)
lifetime = 0.5

[node name="Red_stomp" parent="." instance=ExtResource("7_5bp0y")]
position = Vector2(481, 235)
scale = Vector2(2, 2)
lifetime = 0.5

[node name="Blue_stomp" parent="." instance=ExtResource("8_m7ju1")]
position = Vector2(481, 235)
scale = Vector2(2, 2)
lifetime = 0.5

[node name="White_stomp" parent="." instance=ExtResource("9_a52wa")]
position = Vector2(481, 235)
scale = Vector2(2, 2)
lifetime = 0.5

[node name="PauseMenu" parent="." instance=ExtResource("10_0i83q")]
